Add button transform when clicked

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Change Background</title>
-        <link rel="stylesheet" href="./styles.css">
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div id="container">
-                <h1 id="display-color">Color - #2596be</h1>
-            <button id="button">Click Me</button>
-        </div>
-        <script src="./script.js"></script>
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./styles.css" />
+		<title>Change Background</title>
+	</head>
+	<body>
+		<div id="container">
+			<h1 id="display-color">COLOR - #2596BE</h1>
+			<div id="button">Click Me</div>
+		</div>
+		<script src="./script.js"></script>
+	</body>
 </html>
